--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ channels==2.0.2
 channels-redis==2.1.1
 constantly==15.1.0
 daphne==2.1.0
-django==2.0.3
+Django==2.0.3
 django-cors-headers==2.2.0
 django-filter==1.1.0
 djangorestframework==3.8.2
@@ -17,7 +17,7 @@ hiredis==0.2.0
 hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
-Markdown==2.6.11
+markdown==2.6.11
 msgpack==0.5.6
 psycopg2==2.7.4
 pypiwin32==223
